# circle-plugins

./: .gitignore  README.md
arc-town example/: .gitignore  tsconfig.tsbuildinfo
arc-town example/convex/: messages.ts
arc-town example/data/: openrouterDefaults.ts
arc-town example/scripts/: prepareWorldLogos.py  sync-env.mjs  test-plugin-integration.mjs
arc-town example/src/: main.tsx
core-py/: README.md  pyproject.toml
core-py/src/circle_agent_kit/: __init__.py  agent_cli.py  chains.py  client.py  config.py  contracts.py  errors.py  guardrails.py  kit.py  nanopayments.py  requests.py
core-py/src/circle_agent_kit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core-py/tests/: test_kit.py
core-ts/: README.md  package.json  tsconfig.json
core-ts/src/: agent-cli.ts  chains.ts  client.ts  config.ts  contracts.ts  errors.ts  guardrails.ts  ids.ts  index.ts  kit.ts  nanopayments.ts  requests.ts  transfers.ts  types.ts  wallets.ts
core-ts/test/: kit.test.ts
eliza-town-main/: .env.example  .gitignore  package-lock.json  package.json
eliza-town-main/convex/: constants.ts  init.ts  maintenance.ts
eliza-town-main/data/: characters.ts  starterDefaults.ts  worldLogos.ts
eliza-town-main/eliza-server/: .env.example  package-lock.json  package.json  tsconfig.json
eliza-town-main/src/: App.tsx
hermes/circle-agent-kit/: README.md  __init__.py  params.py  plugin.yaml  schemas.py  (+1 more)
landing/: vite.config.ts
plugin-eliza/: README.md  package.json
plugin-openclaw/: README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
(+76 files in other folders)
